# dnn_experiment

./: .gitmodules  CMakeLists.txt  package.xml  run.sh  run_3dbonet.sh  setup.py
bonet/: CMakeLists.txt  package.xml
bonet/launch/: bonet.launch
bonet/src/: bonet_code.cpp
docker/: 3DBoNet.Dockerfile  Pointgroup.Dockerfile  init_3dbonet.sh  unet.Dockerfile
launch/: bonet.launch  unet.launch
pymodules/: setup.py
pymodules/Objectron/: __init__.py  cpp.py
pymodules/bonet_dataset/: __init__.py  dataset.py
pymodules/exts/: run.sh
pymodules/exts/py2ext/: CMakeLists.txt
pymodules/exts/py3ext/: CMakeLists.txt
pymodules/exts/src/: unet_code.cpp  unet_segment.cpp
pymodules/unet/: __init__.py  gen_obblabeling.py  gen_vtkscene.py  iternet.py  segment_dataset.py  test_dunet.py  util.py
ros_bonet/: CMakeLists.txt  package.xml
ros_bonet/launch/: bonet.launch
ros_bonet/scripts/: dataset_test.py  dataset_train.py  gen_vtkscene.py  indoor3d_util.py  ros_bonet.py  virtual_train.py  vis_dataset.py  vtk_advanced.py  vtk_train.py
ros_bonet/src/: bonet_code.cpp
ros_others/: CMakeLists.txt  package.xml
ros_others/scripts/: ros_3dbb.py
ros_unet/: CMakeLists.txt  README.md  log.sh  package.xml  run.sh
ros_unet/extract/: extract.py
ros_unet/exts/: run.sh
ros_unet/exts/py2ext/: CMakeLists.txt
ros_unet/exts/py3ext/: CMakeLists.txt
ros_unet/include/: mask2obb.h  ros_util.h  segment2d.h  utils.h
ros_unet/launch/: azure_driver.launch  bg.launch  eval.launch  evalcloud.launch  ex.launch  helios.launch  k4a.launch  label.launch  service.launch  unet.launch
ros_unet/msg/: Plane.msg
ros_unet/py2ext/: CMakeLists.txt
ros_unet/py3ext/: CMakeLists.txt
ros_unet/scripts/: draw_fig.py  evaluator.py  fix.py  labeling.py  myadjust_text.py  ros_client.py  ros_eval.py  ros_eval2.py  ros_evalcloud.py  ros_ransacobb_server.py  ros_unet.py  ros_unet_server.py  train_iternet.py
ros_unet/scripts/Objectron/: __init__.py  iou.py
ros_unet/scripts/unet/: __init__.py  edge_dataset.py  gen_labeling.py  gen_obblabeling.py  gen_pointscloud.py  gen_vtkscene.py  iternet.py  segment_dataset.py  split_input.py  test_iternet.py  train_dunet.py  train_iternet.py  train_iternet_step2.py  unet_model.py  unet_parts.py  util.py
ros_unet/src/: cgal_server.cpp  floor_detector.cpp  mask2obb.cpp  mvbb_test.cpp  obb_server.cpp  pipeline_node.cpp  ros_bg.cpp  ros_util.cpp  segment2d.cpp  segment2d_ml.cpp  unet_code.cpp  utils.cpp  watershed.cpp
ros_unet/srv/: ClearCamera.srv  ComputeEdge.srv  ComputeFloor.srv  ComputeObb.srv  ComputePoints2Obb.srv  ComputeRansacObb.srv  ComputeTwoPoints2Obb.srv  GetBg.srv  SetCamera.srv
run/: run_3dbonet.sh  run_pointgroup.sh  run_unet.sh
scripts/: ros_bonet.py  ros_unet.py
scripts/unet/: __init__.py  edge_dataset.py  generate_dataset.py  segment_dataset.py  test_iternet.py  train_iternet.py  train_unet.py  unet_model.py  util.py
unet/: CMakeLists.txt  __init__.py  edge_dataset.py  package.xml  run.sh  train_iternet.py  train_unet.py  unet_model.py  util.py
unet/launch/: unet.launch
unet/scripts/: ros_unet.py
unet/scripts/unet/: gen_labeling.py  gen_vtkscene.py  segment_dataset.py  test_iternet.py  train_dunet.py  train_iternet.py  unet_model.py  util.py
unet/src/: unet_code.cpp
unloader_msgs/: CMakeLists.txt  package.xml
unloader_msgs/msg/: BoolArray.msg  CaliInfo.msg  DateTime.msg  JointTrajectoryArray.msg  Mask.msg  MultiarmPose.msg  Object.msg  ObjectArray.msg  ObjectPairs.msg  PlanningResult.msg  RobotState.msg  SyncronizedSeq.msg  TimeArray.msg  UnloaderTime.msg  VisionState.msg  YolactSegm.msg  YoloDetections.msg
unloader_msgs/srv/: Capture.srv  CharucoPose.srv  MarkerPose.srv  Optimization.srv  RobotarmPose.srv
